--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,26 @@
   "description": "Create your own list of favorite repositories",
   "author": "Malte Heyenga",
   "homepage_url": "https://github.com/emha/chrome-github-favorites",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "permissions": [
     "storage"
   ],
   "content_scripts": [
     {
       "matches": ["https://*.github.com/"],
-      "js": ["content-script.js"]
+      "js": ["./js/favorites-list.js"]
     },
     {
       "matches": ["https://*.github.com/*/*"],
-      "js": ["repo-head.js"]
+      "js": ["./js/repo-head.js"]
     }
   ],
-  "manifest_version": 2
+  "manifest_version": 2,
+  "icons": {
+    "16": "./assets/icon16.png",
+    "48": "./assets/icon48.png",
+   "128": "./assets/icon128.png",
+   "256": "./assets/icon256.png",
+   "512": "./assets/icon512.png"
+  }
 }
