update to new github structure // add option to disable/enable list on dashboard

--- a/manifest.json
+++ b/manifest.json
@@ -3,32 +3,31 @@
   "description": "Create your own list of favorite repositories",
   "author": "Malte Heyenga",
   "homepage_url": "https://github.com/emha/chrome-github-favorites",
-  "version": "1.2.0",
-  "permissions": [
-    "storage"
-  ],
+  "version": "1.3.0",
+  "permissions": ["storage", "contextMenus"],
   "content_scripts": [
     {
       "matches": ["https://*.github.com/"],
-      "js": [
-        "./js/helpers.js",
-        "./js/favorites-list.js"
-      ]
+      "js": ["./js/helpers.js", "./js/favorites-list.js"]
     },
     {
       "matches": ["https://*.github.com/*/*"],
-      "js": [
-        "./js/helpers.js",
-        "./js/repo-head.js"
-      ]
+      "js": ["./js/helpers.js", "./js/repo-head.js"]
     }
   ],
-  "manifest_version": 2,
+  "action": {
+    "default_title": "Open settings",
+    "default_popup": "./html/settings.html"
+  },
+  "manifest_version": 3,
   "icons": {
     "16": "./assets/icon16.png",
     "48": "./assets/icon48.png",
-   "128": "./assets/icon128.png",
-   "256": "./assets/icon256.png",
-   "512": "./assets/icon512.png"
+    "128": "./assets/icon128.png",
+    "256": "./assets/icon256.png",
+    "512": "./assets/icon512.png"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self';"
   }
 }
